k8s-ingress-controller/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mzo-app-space

---

apiVersion: v1
kind: Namespace
metadata:
  name: mzo-ingress-space
