k8s-ingress-controller/ingress-resource-hostnames.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
  namespace: mzo-app-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - test.echo.lakedev.azmk8s.io
      secretName: test-cert
  rules:
    - http:
        paths:
          - path: /wear
            backend:
              serviceName: wear-service
              servicePort: 8080
          - path: /watch
            backend:
              serviceName: video-service
              servicePort: 8080
    - host: test.echo.lakedev.azmk8s.io
      http:
        paths:
          - path: /
            backend:
              serviceName: echo-service
              servicePort: 500 # port exposed by echo-service
